--- a/css/main.scss
+++ b/css/main.scss
@@ -78,8 +78,7 @@ menu{
 		stroke-width: 0.18rem; 
 		stroke: $dark-purple; 
 		fill: white; 
-		&:hover path, 
-		svg line{
+		&:hover path, line{
 			fill: $highlight;
 		}
 	}
@@ -94,12 +93,28 @@ menu{
 		&#about-button{
 			right: 10vw;
 			bottom: 0px;
+			#hand path,
+			#hand line{
+				transform-origin: 89% 48%;
+				-webkit-transition: transform 0.5s;
+			       -moz-transition: transform 0.5s;
+			        -ms-transition: transform 0.5s;
+			            transition: transform 0.5s;
+			}
 		}
 		&#work-button{
 			width: 8vw;
 			height: auto;
 			top: 11vw; 
 			right: 0%;
+			#hand path,
+			#hand line{
+				transform-origin: 47% 11%;
+				-webkit-transition: transform 0.5s;
+			       -moz-transition: transform 0.5s;
+			        -ms-transition: transform 0.5s;
+			            transition: transform 0.5s;
+			}
 		}
 	}
 	.fade{
@@ -110,7 +125,7 @@ menu{
 		&#work-button{
 			#hand path,
 			#hand line{
-				transform-origin: 50% 10%;
+				transform-origin: 47% 11%;
 				-webkit-transform: rotate(225deg);
 				-moz-transform: rotate(225deg);
 				transform: rotate(225deg);
@@ -120,7 +135,7 @@ menu{
 		&#about-button{
 			#hand path,
 			#hand line{
-				transform-origin: 90% 48%;
+				transform-origin: 89% 48%;
 				-webkit-transform: rotate(225deg);
 				-moz-transform: rotate(225deg);
 				transform: rotate(225deg);
