--- a/css/main.scss
+++ b/css/main.scss
@@ -263,6 +263,8 @@ section{
 
 #about{
 	background: rgba(164,95,201,0.85);
+	// background: rgba(208, 143, 243, 0.9);
+
 	position: relative;
 	height: 100vh; 
 	#aboutcontent{
