--- a/css/main.css
+++ b/css/main.css
@@ -138,30 +138,37 @@ section {
     #header img.plant#spider {
       z-index: 10;
       width: 40%;
+      max-width: 500px;
       top: 0px;
       left: 5%; }
     #header img.plant#ficus {
       width: 50%;
+      max-width: 560px;
       right: 5%;
       bottom: 20vw; }
     #header img.plant#big-leaf {
       width: 40%;
+      max-width: 480px;
       left: -5%;
       bottom: 12vw; }
-    #header img.plant#blue1 {
+    #header img.plant#blue {
       width: 35%;
+      max-width: 380px;
       left: 5%;
       bottom: 5vw; }
-    #header img.plant#blue2 {
-      width: 35%;
+    #header img.plant#green {
+      width: 28%;
+      max-width: 300px;
       right: -5%;
       bottom: 16vw; }
     #header img.plant#snake {
       width: 22%;
+      max-width: 180px;
       right: 10%;
       bottom: 14vw; }
     #header img.plant#veeg {
       width: 20%;
+      ax-width: 176px;
       right: 5%;
       bottom: 12vw; }
 
@@ -255,7 +262,7 @@ section {
       width: 28%;
       left: 2%;
       bottom: 7vw; }
-    #header img.plant#blue1 {
+    #header img.plant#blue {
       width: 25%;
       left: 12%;
       bottom: 2vw; }
@@ -263,8 +270,8 @@ section {
       width: 32%;
       right: 16%;
       bottom: 10vw; }
-    #header img.plant#blue2 {
-      width: 22%;
+    #header img.plant#green {
+      width: 20%;
       right: 2%;
       bottom: 8vw; }
     #header img.plant#snake {
@@ -304,7 +311,7 @@ section {
 
   #about #aboutcontent {
     width: 60%;
-    left: 15%;
+    left: 25%;
     top: 20%; }
   #about img {
     width: 20%; }
@@ -324,7 +331,7 @@ section {
       width: 28%;
       left: 2%;
       bottom: 7vw; }
-    #header .bg img.plant#blue1 {
+    #header .bg img.plant#blue {
       width: 25%;
       left: 12%;
       bottom: 2vw; }
@@ -332,8 +339,8 @@ section {
       width: 25%;
       right: 22%;
       bottom: 10vw; }
-    #header .bg img.plant#blue2 {
-      width: 22%;
+    #header .bg img.plant#green {
+      width: 15%;
       right: 2%;
       bottom: 8vw; }
     #header .bg img.plant#snake {
@@ -386,7 +393,7 @@ section {
     justify-content: center;
     align-items: center; }
     #work #workcontent a img {
-      opacity: 0.6; }
+      opacity: 0.4; }
     #work #workcontent a div.overlay {
       display: block;
       position: absolute; } }
