--- a/css/main.scss
+++ b/css/main.scss
@@ -185,36 +185,43 @@ section{
 		&#spider{
 			z-index:10;
 			width: 40%;
+			max-width: 500px;
 			top: 0px; 
 			left: 5%;
 		}
 		&#ficus{
 			width: 50%;
+			max-width: 560px;
 			right: 5%; 
 			bottom: 20vw; 
 		}
 		&#big-leaf{
 			width: 40%;
+			max-width: 480px;
 			left: -5%; 
 			bottom: 12vw;
 		}
-		&#blue1{
+		&#blue{
 			width: 35%;
+			max-width: 380px;
 			left: 5%; 
 			bottom: 5vw;	
 		}
-		&#blue2{
-			width: 35%;
+		&#green{
+			width: 28%;
+			max-width: 300px;
 			right: -5%; 
 			bottom: 16vw;	
 		}
 		&#snake{
 			width: 22%;
+			max-width: 180px;
 			right: 10%; 
 			bottom: 14vw; 
 		}
 		&#veeg{
 			width: 20%;
+			ax-width: 176px;
 			right: 5%; 
 			bottom: 12vw;
 		}
@@ -333,7 +340,7 @@ section{
 				left: 2%; 
 				bottom: 7vw;
 			}
-			&#blue1{
+			&#blue{
 				width: 25%;
 				left: 12%; 
 				bottom: 2vw;	
@@ -343,8 +350,8 @@ section{
 				right: 16%; 
 				bottom: 10vw; 
 			}
-			&#blue2{
-				width: 22%;
+			&#green{
+				width: 20%;
 				right: 2%; 
 				bottom: 8vw;	
 			}
@@ -403,7 +410,7 @@ section{
 	#about{
 		#aboutcontent{
 			width: 60%; 
-			left: 15%; 
+			left: 25%; 
 			top: 20%; 
 		} 
 		img{			
@@ -437,7 +444,7 @@ section{
 					left: 2%; 
 					bottom: 7vw;
 				}
-				&#blue1{
+				&#blue{
 					width: 25%;
 					left: 12%; 
 					bottom: 2vw;	
@@ -447,8 +454,8 @@ section{
 					right: 22%; 
 					bottom: 10vw; 
 				}
-				&#blue2{
-					width: 22%;
+				&#green{
+					width: 15%;
 					right: 2%; 
 					bottom: 8vw;	
 				}
@@ -533,7 +540,7 @@ section{
 			justify-content: center;
 			align-items: center;
 			img{
-				opacity: 0.6;
+				opacity: 0.4;
 			}
 			div.overlay{
 				display: block;
