--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Averia+Sans+Libre:300,400,400i,700");
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display:700");
-@import url("https://fonts.googleapis.com/css?family=Alegreya:700");
-@import url("https://fonts.googleapis.com/css?family=Gentium+Basic:700");
 @import url("https://fonts.googleapis.com/css?family=Averia+Serif+Libre:300,400,700");
-@import url("https://fonts.googleapis.com/css?family=Eczar:400,500,600");
-@import url("https://fonts.googleapis.com/css?family=UnifrakturMaguntia");
-@import url("https://fonts.googleapis.com/css?family=Lora:400,700");
 html {
   font-size: 10px; }
 
@@ -19,21 +13,29 @@ h2 {
   font-size: 6rem;
   line-height: 5.6rem;
   font-weight: 400;
-  text-stroke: 1px #292b87;
-  -webkit-text-stroke: 1px #292b87;
-  -moz-text-stroke: 1px #292b87;
-  color: white;
-  margin-bottom: 3rem; }
+  text-stroke: 1px #1d1f60;
+  -webkit-text-stroke: 1px #1d1f60;
+  -moz-text-stroke: 1px #1d1f60;
+  color: white; }
+
+h3 {
+  font-family: "Averia Sans Libre", sans-serif;
+  text-transform: uppercase;
+  font-size: 3rem;
+  line-height: 3rem;
+  color: #1d1f60;
+  text-align: center;
+  margin-top: 1rem; }
 
 p, blockquote {
   font-family: "Georgia", serif;
-  color: #220689;
+  color: #1d1f60;
   font-size: 4rem;
   margin-bottom: 3rem; }
 
 blockquote {
   padding-left: 3rem;
-  border-left: 2px solid #220689; }
+  border-left: 2px solid #1d1f60; }
 
 a {
   font-family: "Averia Serif Libre", sans-serif;
@@ -41,11 +43,11 @@ a {
   font-size: 4rem;
   letter-spacing: -0.08rem;
   text-decoration: none;
-  color: #220689; }
+  color: #1d1f60; }
   a:visited {
-    color: #220689; }
+    color: #1d1f60; }
   a:hover {
-    color: #BFFFFF; }
+    color: #292b87; }
 
 #canvas {
   z-index: -1000;
@@ -57,7 +59,7 @@ menu {
   top: 0px; }
   menu svg {
     stroke-width: 0.18rem;
-    stroke: #292b87;
+    stroke: #1d1f60;
     fill: white; }
     menu svg:hover path, menu svg line {
       fill: #BFFFFF; }
@@ -201,9 +203,9 @@ section {
         #work #workcontent a div.overlay h2 {
           text-align: center;
           font-size: 6rem;
-          text-stroke: 1px #292b87;
-          -webkit-text-stroke: 1px #292b87;
-          -moz-text-stroke: 1px #292b87;
+          text-stroke: 1px #1d1f60;
+          -webkit-text-stroke: 1px #1d1f60;
+          -moz-text-stroke: 1px #1d1f60;
           line-height: 5rem; }
 
 #about {
@@ -230,6 +232,12 @@ section {
     left: 5%;
     padding-top: 20.5rem;
     padding-bottom: 20rem; }
+    #project #projectcontent h2 {
+      margin-bottom: 3rem; }
+    #project #projectcontent h3 {
+      margin-top: -2.6rem;
+      margin-bottom: 4rem;
+      text-align: left; }
     #project #projectcontent div.img-group {
       margin-top: 5rem;
       margin-bottom: 5rem; }
