--- a/css/main.scss
+++ b/css/main.scss
@@ -281,9 +281,9 @@ section{
 	}
 	img{
 		position: absolute;
-		bottom: 2rem; 
-		left: 5%; 
-		width: 30%;
+		bottom: 0rem; 
+		// left: 5%; 
+		width: 40%;
 	}
 }
 
@@ -421,9 +421,6 @@ section{
 			left: 25%; 
 			top: 20%; 
 		} 
-		img{			
-			width: 20%;
-		}
 	}
 	#project{
 		#projectcontent{
@@ -516,9 +513,6 @@ section{
 			left: 40%; 
 			top: 20%; 
 		} 
-		img{			
-			width: 20%;
-		}
 	}
 	#project{
 		#projectcontent{
