--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@ $purple: #292b87;
 $dark-purple: #1d1f60;
 $body-color: #1d1f60;
 $highlight: #BFFFFF;
+$header-color: #CFCFE4;
 
 html{
   font-size: 10px;
@@ -77,7 +78,11 @@ menu{
 	svg{
 		stroke-width: 0.18rem; 
 		stroke: $dark-purple; 
-		fill: white; 
+		path.cls-1{
+			// fill: none;// #747474; 
+			// fill: rgba(30,30,100,0.2);
+			// fill: rgba(40,40,60,0.2);
+		}
 		&:hover path, line{
 			fill: $highlight;
 		}
@@ -164,6 +169,7 @@ section{
 }
 
 #header{
+	background: rgba(132, 127, 255, 0.88);
 	overflow: hidden;
 	height: 101vh; 
 	img.bg{
@@ -184,8 +190,7 @@ section{
 		position: absolute;
 		&#spider{
 			z-index:10;
-			width: 40%;
-			max-width: 500px;
+			width: 30%;
 			top: 0px; 
 			left: 5%;
 		}
@@ -229,7 +234,6 @@ section{
 }
 
 #work{
-	background: rgba(57,0,130,0.8);
 	background: rgba(90,90,248,0.85);
 	position: relative;
 	display: block;
@@ -242,6 +246,7 @@ section{
 		padding-bottom: 10rem;
 		position: relative;
 		a{
+			background: #84a1ff;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -339,27 +344,27 @@ section{
 		img.plant{
 			position: absolute;
 			&#spider{
-				width: 30%;
+				width: 22%;
 				top: 0px; 
 				left: 5%;
 			}
 			&#big-leaf{
-				width: 28%;
+				width: 20%;
 				left: 2%; 
 				bottom: 7vw;
 			}
 			&#blue{
-				width: 25%;
+				width: 20%;
 				left: 12%; 
 				bottom: 2vw;	
 			}
 			&#ficus{
-				width: 32%;
+				width: 25%;
 				right: 16%; 
 				bottom: 10vw; 
 			}
 			&#green{
-				width: 20%;
+				width: 15%;
 				right: 2%; 
 				bottom: 8vw;	
 			}
@@ -394,7 +399,8 @@ section{
 			flex-direction: row;
 			align-items: flex-start;
 			a{
-				width: 50%;
+				width: 47%;
+				margin: 10px;
 				height: auto;
 				img{
 					opacity: 1;
@@ -405,7 +411,7 @@ section{
 				}
 				&:hover{
 					img{
-						opacity: 0.3;
+						opacity: 0.2;
 					}
 					div.overlay{
 						display: block;
@@ -486,18 +492,18 @@ section{
 			flex-direction: row;
 			align-items: flex-start;
 			a{
-				width: 33%;
+				width: 31%;
 				height: auto;
 				img{
 					opacity: 1;
 				}
 				div.overlay{
 					display: none;
-					width: 33%;
+					width: 31%;
 				}
 				&:hover{
 					img{
-						opacity: 0.3;
+						opacity: 0.2;
 					}
 					div.overlay{
 						display: block;
