--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ a {
   text-decoration: none;
   color: black; }
 
+.italic {
+  font-style: italic; }
+
 menu {
   top: 0px;
   position: fixed; }
@@ -40,8 +43,7 @@ menu {
 
 section#header {
   margin: auto;
-  height: 60vh;
-  max-height: 800px;
+  padding: 200px 0;
   background-image: url(../images/_dots.jpg);
   background-repeat: repeat;
   background-size: 150px auto; }
@@ -54,6 +56,8 @@ section#header {
     width: 80%;
     font-size: 4.5vw;
     max-width: 600px; }
+    section#header .introHeader a {
+      font-style: italic; }
 
 p {
   font-family: "source-sans-pro", sans-serif;
@@ -65,6 +69,10 @@ p {
     p a:hover {
       text-decoration: underline; }
 
+p.blockquote {
+  border-left: 2px solid black;
+  padding-left: 30px; }
+
 blockquote {
   font-family: "source-sans-pro", sans-serif;
   font-weight: 300;
@@ -75,24 +83,24 @@ blockquote {
   padding-left: 30px; }
 
 h3.sectionTitle {
-  font-size: 18px;
+  font-size: 20px;
   width: 100%;
   padding: 10px 0 40px 0;
   border-top: 3px dotted black; }
 
 h3.title {
   margin-top: 8px;
+  margin-bottom: 5px;
   font-family: "alverata", serif;
   font-size: 20px;
   font-weight: 300; }
 
 h3.skills {
-  font-size: 18px;
+  font-size: 20px;
   font-family: "source-sans-pro", sans-serif;
-  color: #66676B;
-  margin-top: 5px;
-  font-weight: 300;
-  font-style: italic; }
+  color: #62656f;
+  margin-top: 8px;
+  font-weight: 300; }
 
 section#work {
   margin: auto;
@@ -183,6 +191,10 @@ section#fullProject {
     margin: 0 auto 20px auto;
     top: 50px;
     position: relative; }
+    section#fullProject p.intro {
+      font-family: "alverata", serif;
+      line-height: 30px;
+      font-size: 20px; }
   section#fullProject div.img-group {
     position: relative;
     margin-top: 150px;
@@ -214,7 +226,6 @@ section#nextProject {
         text-align: center;
         font-family: "alverata", serif;
         font-weight: 600;
-        width: 66%;
         margin: 5px auto 0 auto; }
       section#nextProject .header a h3.skills {
         color: #454b62; }
@@ -232,19 +243,17 @@ section#about {
   position: relative; }
   section#about img#self,
   section#about div#hello {
+    align-self: flex-start;
     width: 100%; }
-    section#about img#self h2, section#about img#self h3,
-    section#about div#hello h2,
-    section#about div#hello h3 {
-      text-align: center; }
-      section#about img#self h2.title, section#about img#self h3.title,
-      section#about div#hello h2.title,
-      section#about div#hello h3.title {
-        margin-bottom: 5px; }
-      section#about img#self h2.selectedHeader, section#about img#self h3.selectedHeader,
-      section#about div#hello h2.selectedHeader,
-      section#about div#hello h3.selectedHeader {
-        margin-bottom: 50px; }
+    section#about img#self h2.title, section#about img#self h3.title,
+    section#about div#hello h2.title,
+    section#about div#hello h3.title {
+      margin-bottom: 20px; }
+    section#about img#self h2.selectedHeader, section#about img#self h3.selectedHeader,
+    section#about div#hello h2.selectedHeader,
+    section#about div#hello h3.selectedHeader {
+      margin-bottom: 40px;
+      font-size: 3.8vw; }
     section#about img#self p,
     section#about div#hello p {
       margin-bottom: 20px; }
@@ -256,13 +265,15 @@ section#footer {
   text-align: center;
   padding: 50px 0 50px 0; }
   section#footer h3 {
+    color: #62656f;
     font-size: 18px;
     font-family: "source-sans-pro", sans-serif;
     margin-top: 5px;
-    font-weight: 300;
-    font-style: italic; }
-    section#footer h3 a:hover {
-      text-decoration: underline; }
+    font-weight: 300; }
+    section#footer h3 a {
+      color: #62656f; }
+      section#footer h3 a:hover {
+        text-decoration: underline; }
 
 @media only screen and (min-width: 992px) {
   menu {
@@ -304,7 +315,7 @@ section#footer {
       section#work #selectedWork .project {
         width: 48%;
         max-width: 512px;
-        margin-bottom: 140px; }
+        margin-bottom: 100px; }
         section#work #selectedWork .project:hover h2.selectedHeader {
           color: black;
           text-decoration: underline; }
@@ -349,20 +360,22 @@ section#footer {
   section#about {
     overflow: hidden;
     width: 80%;
-    max-width: 1074px;
-    padding: 150px 0 150px 0; }
+    max-width: 1330px;
+    padding: 150px 0 150px 0;
+    display: flex;
+    justify-content: center; }
     section#about div#hello {
-      margin-top: 30px; }
-      section#about div#hello h2, section#about div#hello h3 {
-        width: 60%;
-        float: right; }
-        section#about div#hello h2.selectedHeader, section#about div#hello h2.title, section#about div#hello h3.selectedHeader, section#about div#hello h3.title {
-          text-align: left; }
+      width: 50%; }
+      section#about div#hello h2.title, section#about div#hello h3.title {
+        text-align: left; }
+      section#about div#hello h2.selectedHeader, section#about div#hello h3.selectedHeader {
+        text-align: left;
+        font-size: 1.8vw;
+        line-height: 2.4vw; }
       section#about div#hello p {
         text-align: left; }
     section#about img#self {
-      width: 40%;
-      float: left; } }
+      width: 38%; } }
 @media only screen and (min-width: 1330px) {
   section#work #selectedWork .project {
     margin-bottom: 120px; }
@@ -379,6 +392,13 @@ section#footer {
   section#nextProject h2.selectedHeader {
     font-size: 4.5vw;
     max-width: 1074px;
-    font-size: 40px; } }
+    font-size: 40px; }
+
+  section#about img#self,
+  section#about div#hello {
+    align-self: center; }
+  section#about div#hello h2.selectedHeader {
+    font-size: 24px;
+    line-height: 30px; } }
 
 /*# sourceMappingURL=style.css.map */
